--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
     // ---------------------------------------------------------
     const IMG_SAC_BIACOLOR = "sac_biacolor.jpg";
     const IMG_SAC_TERRE_CUITE = "sac_terrecuite.jpg";
-    const IMG_SAC_BETON = "sac_tradibeton.jpg";
+    const IMG_SAC_BETON = "sac_tradibeton.png";
     const IMG_SAC_BIAJOINT = "sac_biajoint.jpg";
     const IMG_SAC_EASYJOINT = "sac_easyjoint.jpg";
 
