--- a/index.html
+++ b/index.html
@@ -751,11 +751,11 @@
     // ---------------------------------------------------------
     // 1. CONFIGURATION DES IMAGES
     // ---------------------------------------------------------
-    const IMG_SAC_BIACOLOR = "sac_biacolor.jpg";
-    const IMG_SAC_TERRE_CUITE = "sac_terrecuite.jpg";
-    const IMG_SAC_BETON = "sac_tradibeton.jpg";
-    const IMG_SAC_BIAJOINT = "sac_biajoint.jpg";
-    const IMG_SAC_EASYJOINT = "sac_easyjoint.jpg";
+    const IMG_SAC_BIACOLOR = "sac_biacolor.png";
+    const IMG_SAC_TERRE_CUITE = "sac_terrecuite.png";
+    const IMG_SAC_BETON = "sac_tradibeton.png";
+    const IMG_SAC_BIAJOINT = "sac_biajoint.png";
+    const IMG_SAC_EASYJOINT = "sac_easyjoint.png";
 
     // ---------------------------------------------------------
     // 2. VARIABLES GLOBALES & DATA
