--- a/index.html
+++ b/index.html
@@ -1558,7 +1558,7 @@
         }
 
         // 3. Construction du Corps du mail (AVEC INFO CONTACT)
-        const emailBody = `Bonjour BIAL Industrie,\n\n` +
+        const emailBody = `Bonjour BIALLAIS Industries,\n\n` +
             `Voici une demande de prix pour le chantier suivant :\n\n` +
             `==============================\n` +
             `COORDONNÉES CLIENT\n` +
