--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 
                     <div class="form-group" style="margin-bottom:15px;">
                         <label for="userColor" style="color:var(--accent-color);">Couleur de joint souhaitée <span class="required-star">*</span></label>
-                        <input type="text" id="userColor" placeholder="Ex: Gris Ciment, Beige, Ton Pierre..." style="padding:10px; font-size:0.9rem; border-color:var(--accent-color);">
+                        <input type="text" id="userColor" placeholder="Ex: Gris Clair, Blanc, Ton Pierre..." style="padding:10px; font-size:0.9rem; border-color:var(--accent-color);">
                     </div>
                     
                     <div class="form-group" style="margin-bottom:0;">
